<resources>
    <string name="app_name">DormSpot</string>
    <string name="logo_desc">Dormspot logo</string>


        <string name="sign_up_facebook">Sign Up with Facebook</string>
        <string name="sign_up_google">Sign Up with Google</string>
        <string name="sign_up_email">Sign up with email</string>
        <string name="already_have_account">I already have an account</string>
        <string name="remember_me">Remember Me</string>
        <string name="forgot_password">Forgot password?</string>

        <string name="sign_in_facebook">Sign In with Facebook</string>

        <string name="email_username">Email/Username</string>
        <string name="password">Password</string>
        <string name="sign_in">Sign In</string>
        <string name="dont_have_account">Don\'t have an account? Sign Up</string>
        <string name="back_button">back button</string>
        <string name="firstName">First name</string>
        <string name="lastName">Last name</string>
        <string name="inputUsername">Create Username</string>
        <string name="inputEmail">Email</string>
        <string name="inputPhoneNumber">Phone Number</string>
        <string name="inputPassword">Password</string>
        <string name="inputConfirmPassword">Confirm Password</string>
        <string name="verify">Verify your Account</string>
        <string name="messageVerify">Please enter the code we\'ve sent to your email</string>
        <string name="sendACode">Didn\'t receive the code?</string>
        <string name="resend">Resend</string>
        <string name="verifybutton">Verify</string>
        <string name="welcomeMessage">Let\'s find your spot, Welcome to</string>
        <string name="getStarted">Get Started</string>
        <string name="highly_rated">Highly Rated</string>
        <string name="dorm_spot"> DORM SPOT </string>

    <string name="button_description">Description of button action</string>
    <!-- Example for specific buttons: -->
    <string name="profile_button">User profile</string>
    <string name="settings_button">Settings</string>
</resources>