<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C1035">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="243dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dormspothorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Facebook Button (First) -->
    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#1877F2"
        android:text="@string/sign_in_facebook"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <!-- Google Button (Second) -->
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_up_google"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:drawableStart="@drawable/google"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

    <!-- Email/Username Button -->
    <Button
        android:id="@+id/btnUsername"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#6290C3"
        android:text="@string/email_username"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#F1FFE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

    <!-- Password Button -->
    <Button
        android:id="@+id/btnPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#6290C3"
        android:text="@string/password"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#F1FFE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUsername" />

    <!-- Remember Me Checkbox -->

    <LinearLayout
        android:id="@+id/rememberForgotLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@id/btnPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/remember_me"
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FFFFFF"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#1A1B41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberForgotLayout" />

    <!-- TextView for "Don't Have An Account?" -->
    <TextView
        android:id="@+id/textDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dont_have_account"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
