<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C1035">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="285dp"
        android:layout_height="269dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dormspot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email Button -->
    <Button
        android:id="@+id/btnEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D1F2EB"
        android:text="@string/sign_up_email"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="@font/neuebold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <!-- TextView for "I already have an account" -->
    <TextView
        android:id="@+id/textAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/already_have_account"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/neuebold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>
